--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "leaflet": "^1.9.3",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-paypal-express-checkout": "^1.0.5",
     "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.4.4",
