--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage --watchAll=false",
+    "coverage": "istanbul cover node_modules/.bin/jest --coverage && istanbul report text-summary",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,6 +47,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
+    "istanbul": "^0.4.5",
     "jest": "^29.5.0",
     "jest-mock-axios": "^4.7.1"
   }
